prevent list double border

--- a/client/post-editor/editor-revisions-list/style.scss
+++ b/client/post-editor/editor-revisions-list/style.scss
@@ -76,6 +76,10 @@
 	font-size: 13px;
 }
 
+.editor-revisions-list__list {
+	border-top: none;
+}
+
 .editor-revisions-list__header {
 	padding: 1rem;
 }
